[gd_scene load_steps=11 format=3 uid="uid://btcvll6jqg7ly"]

[ext_resource type="Shader" path="res://Scripts/blur.gdshader" id="1_hhf85"]
[ext_resource type="Script" path="res://Scripts/die_menu.gd" id="1_t6d1f"]
[ext_resource type="FontFile" uid="uid://0tf8qy53t5ie" path="res://Assets/Fonts/PixelArmy.ttf" id="2_cj1ct"]
[ext_resource type="FontFile" uid="uid://nbm826r7lfx7" path="res://Assets/Fonts/BirchLeaf.ttf" id="3_x5nsf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgtde"]
shader = ExtResource("1_hhf85")
shader_parameter/blur = 0.87
shader_parameter/brightness = 0.835

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6gys"]
bg_color = Color(0.17, 0.17, 0.17, 0.6)
border_width_left = 1
border_width_right = 1
border_color = Color(0.340339, 0.340339, 0.340339, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ec80k"]
bg_color = Color(0.111197, 0.111197, 0.111197, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.393085, 0.393086, 0.393085, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_fsmj5"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 519), Vector2(306, 519)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(414, -54), Vector2(220, -88)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(3.86375, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/HBoxContainer:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-190.856, 282.433), Vector2(5.28992, 283.387)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/Label:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-81.3611, 212.354), Vector2(116.117, 215.105)]
}

[sub_resource type="Animation" id="Animation_mp50j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(306, 519)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(220, -88)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Panel/HBoxContainer:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5.28992, 283.387)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Panel/Label:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(116.117, 215.105)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5t5rv"]
_data = {
"RESET": SubResource("Animation_mp50j"),
"die": SubResource("Animation_fsmj5")
}

[node name="Die_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_t6d1f")

[node name="Panel2" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_qgtde")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 414.0
offset_top = -54.0
offset_right = 414.0
offset_bottom = 465.0
rotation = 0.174533
theme_override_styles/panel = SubResource("StyleBoxFlat_y6gys")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = -190.856
offset_top = 282.433
offset_right = 103.144
offset_bottom = 319.433
rotation = -0.174533
theme_override_constants/separation = 10
alignment = 1

[node name="Restart" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_cj1ct")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ec80k")
text = "Restart"

[node name="MainMenu" type="Button" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_cj1ct")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ec80k")
text = "Main Menu"

[node name="Exit" type="Button" parent="Panel/HBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("2_cj1ct")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_ec80k")
text = "Exit"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = -81.3611
offset_top = 212.354
offset_right = -25.3611
offset_bottom = 243.354
rotation = -0.174533
theme_override_fonts/font = ExtResource("3_x5nsf")
theme_override_font_sizes/font_size = 30
text = "Died"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_5t5rv")
}

[connection signal="pressed" from="Panel/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
